fixed overlap errors and progressed on theme

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,38 @@
     transform: rotate(360deg);
   }
 }
+
+:root {
+  --background-image: linear-gradient(to bottom, #D6B18B,#E5E1D0,#B3B6D3);
+  --text-color: #000;
+  --accent-color: #007bff;
+}
+
+/* Define other theme variables */
+[data-theme='dark'] {
+  --background-color: #333;
+  --text-color: #fff;
+  --accent-color: #1a73e8;
+}
+
+[data-theme='retro'] {
+  --background-color: #f4f4f2;
+  --text-color: #2c3e50;
+  --accent-color: #e67e22;
+}
+
+[data-theme='summer'] {
+  --background-color: #fdfd96;
+  --text-color: #3498db;
+  --accent-color: #e74c3c;
+}
+
+/* Apply the CSS variables in your styles */
+body {
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
+.accent {
+  color: var(--accent-color);
+}
